--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
   },
   "homepage": "https://github.com/j606888/jolly_api_server#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "celebrate": "^15.0.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.6.0",
     "pg-hstore": "^2.3.3",
     "sequelize": "^6.6.2",
